feat: Display build status badge on homepage

--- a/5_Symbols/style.css
+++ b/5_Symbols/style.css
@@ -223,3 +223,8 @@ pre, video {
 .checklist li.checked::after {
     transform: rotate(45deg) scale(1);
 }
+
+.build-status {
+    text-align: center;
+    margin: -1rem 0 2.5rem 0;
+}
