--- a/5_Symbols/style.css
+++ b/5_Symbols/style.css
@@ -255,3 +255,12 @@ pre {
     color: #8b949e;
     margin-top: 0.5rem;
 }
+
+.activity-chart {
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+
+.activity-chart img {
+    max-width: 100%;
+}
